test/good/nullables/op11.px

class A def
    Int x: 0

    constructor def
        print "A"

A? a
print a?.x

a ??= A()
a ??= A()
print a?.x
