test/bad/classes/constructor04.px

class Test def
    constructor(Char x: 0) def
        skip

Test()
